adding the other endpoints
