# backend/route/client.route.js
@@ -7,6 +7,6 @@ router.get('/clients', clientController.getAllClients);
 router.get('/client/:id', clientController.getClientById);
 router.post('/client', clientController.createClient);
 router.put('/client/:id', clientController.updateClient);
-// router.delete('/client/:id', clientController.deleteClient);
+router.delete('/client/:id', clientController.deleteClient);
 
 module.exports = router;
